<resources>
    <string name="app_name">NewsView</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dev_name">Sifat Ullah Chowdhury</string>
    <string name="rokomari">Rokomari</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="demo_app">Demo App</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="about_text">App name: NewsViews \nVersion:1 \nMade for: Rokomari.com \nDeveloper: Sifat Ullah Chowdhury \nEmail: sif.sifat24@gmail.com</string>
    <string name="ok">Ok</string>
    <string name="api_key">d220b14fbaee4d4b89932764667da62d</string>
    <string name="UK">gb</string>
    <string name="latest_news">Latest News</string>
    <string name="communication_error">could not connect</string>
    <string name="US">us</string>
    <string name="gurdian">the-guardian-au</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="content_url">cobtent_url</string>
    <string name="load_the_article_on_your_browser">Load the article on your browser</string>
    <string name="google_sign_in">Log in</string>
    <string name="google_sign_out">Log out</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="could_not_log">Could not log in</string>
    <string name="sports">sports</string>
    <string name="tech">tech</string>
    <string name="mirror">mirror</string>
    <string name="uk">UK</string>
    <string name="Tech">Tech</string>
    <string name="Guardian">Guardian</string>
    <string name="spo">spo</string>
    <string name="mir">mir</string>
    <string name="cnn">cnn</string>
    <string name="give_a_number">Give a number</string>
    <string name="go">Go</string>
    <string name="give_a_date">Give a date</string>
    <string name="month">Month</string>
    <string name="number">Number</string>
    <string name="date">Date</string>
    <string name="want_to_see_a_trivia">Want to see a trivia? Choose one</string>
    <string name="your_trivia">Your trivia</string>
    <string name="news">News</string>
    <string name="trivia">Trivia</string>
    <string name="Read_full_article">Read full Article</string>
</resources>
