<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item tools:ignore="MenuTitle"

        />

    <item

        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"

        />

    <item

        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/about"/>

    <item

        android:id="@+id/nav_google_sign"
        android:icon="@drawable/google"
        android:title="@string/google_sign_in"/>

    <item

        android:id="@+id/nav_google_sign_out"
        android:icon="@drawable/google"
        android:title="@string/google_sign_out"/>

    <item

        android:id="@+id/nav_exit"
        android:icon="@drawable/exit"
        android:title="@string/exit"/>



</menu>
