<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    card_view:cardBackgroundColor="#49cecaca"
    card_view:cardElevation="0dp">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/want_to_see_a_trivia"
            android:textAlignment="center"
            style="@style/Headline"
            android:id="@+id/suggestion"
            android:layout_marginTop="40dp"

            />

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="100dp"
            android:paddingTop="100dp"

            >

            <Button
                android:id="@+id/number"
                style="@style/Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="30dp"
                android:background="#3254ff"
                android:text="Number"
                android:textColor="#fff" />

            <Button
                android:id="@+id/date"
                style="@style/Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="30dp"
                android:background="@color/red"
                android:text="Date"
                android:textColor="#fff"


                />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"

            >

            <TextView
                android:id="@+id/tv"
                style="@style/Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/give_a_number" />


            <EditText
                android:id="@+id/et_number_input"
                android:layout_width="60dp"
                android:layout_height="60dp"


                android:layout_below="@+id/tv"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="@string/number"
                android:inputType="number"

                style="@style/Description"
                android:textSize="@dimen/article_desc_popup"
                android:fontFamily="@font/heuristica_bold"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@id/tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                >
                <EditText
                    android:id="@+id/et_date_input"
                    android:layout_width="60dp"
                    android:layout_height="60dp"


                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:hint="@string/date"
                    android:inputType="number"
                    android:visibility="gone"
                    android:textSize="@dimen/article_desc_popup"
                    android:fontFamily="@font/heuristica_bold"


                    />



                <EditText
                    android:id="@+id/et_month_input"
                    android:layout_width="60dp"
                    android:layout_height="60dp"


                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:hint="@string/month"
                    android:inputType="number"
                    android:visibility="gone"
                    android:textSize="@dimen/article_desc_popup"
                    android:fontFamily="@font/heuristica_bold"


                    />


            </LinearLayout>



        </RelativeLayout>


        <Button
            android:id="@+id/go"
            style="@style/small_btn_selected"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/layout2"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button_selected"
            android:text="@string/go"
            android:visibility="gone" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
